--- a/for-students/ai2-2017.md
+++ b/for-students/ai2-2017.md
@@ -55,14 +55,17 @@ Założenia i wymagania projektowe:
   1. Kompletność projektu.
   
 Lista projektów do wyboru:
- 1. Aplikacja do predykcji i wizualizacji zachowania klientów.
- 1. Aplikacja do wizualizacji wyników eksploracji (np. grupowanie, klasyfikacja) danych.
- 1. Aplikacja do zarzadzania i generowania (w postaci graficznej i tekstowej) raportów biznesowych.
- 1. Aplikacja do analizy i wizualizacji danych społecznościowych.
- 1. Aplikacja do predykcji i wizualizacji pogody na podstawie danych historycznych.
- 1. Aplikacja do analizy sentymentalnej (sentiment analysis) i wizualizacji danych tekstowych.
- 1. Aplikacja do predykcji i wizualizacji sprzedaży w przedsiębiorstwie na podstawie danych historycznych.
- 
+ 1. Aplikacja webowa do predykcji i wizualizacji zachowania klientów.
+ 1. Aplikacja webowa do wizualizacji wyników eksploracji (np. grupowanie, klasyfikacja) danych.
+ 1. Aplikacja webowa do zarządzania i generowania (w postaci graficznej i tekstowej) raportów biznesowych.
+ 1. Aplikacja webowa do analizy i wizualizacji danych społecznościowych.
+ 1. Aplikacja webowa do predykcji i wizualizacji pogody na podstawie danych historycznych.
+ 1. Aplikacja webowa do analizy sentymentalnej (sentiment analysis) i wizualizacji danych tekstowych.
+ 1. Aplikacja webowa do predykcji i wizualizacji sprzedaży w przedsiębiorstwie na podstawie danych historycznych.
+ 1. Aplikacja webowa do predykcji obciążenia restauracji na podstawie danych historycznych.
+ 1. Aplikacja webowa do przewidywania obciążenia ruchu turystycznego na danych kalendarzowych (święta, długie weekendy).
+ 1. Aplikacja webowa do zbierania i analizowania informacji marketingowych na zadany temat.
+  
 Biblioteki:
  * [20 bibliotek, bez których programista Pythona (podobno) nie może żyć](https://pythontips.com/2013/07/30/20-python-libraries-you-cant-live-without/)
  * [Przydatne moduły, pakiety i biblioteki](https://wiki.python.org/moin/UsefulModules)
