--- a/for-students/ai2-2017.md
+++ b/for-students/ai2-2017.md
@@ -63,7 +63,7 @@ Lista projektów do wyboru:
  1. Aplikacja webowa do analizy sentymentalnej (sentiment analysis) i wizualizacji danych tekstowych.
  1. Aplikacja webowa do predykcji i wizualizacji sprzedaży w przedsiębiorstwie na podstawie danych historycznych.
  1. Aplikacja webowa do predykcji obciążenia restauracji na podstawie danych historycznych.
- 1. Aplikacja webowa do przewidywania obciążenia ruchu turystycznego na danych kalendarzowych (święta, długie weekendy).
+ 1. Aplikacja webowa do przewidywania obciążenia ruchu turystycznego na danych historycznych i danych kalendarzowych (np. informacje o świętach, długich weekendach, itp.).
  1. Aplikacja webowa do zbierania i analizowania informacji marketingowych na zadany temat.
   
 Biblioteki:
