--- a/for-students/ai2-2017.md
+++ b/for-students/ai2-2017.md
@@ -21,6 +21,18 @@ Materiały:
 * Ćwiczenia 1: [Link 1](http://exercism.io/languages/python/exercises), [Link 2](http://www.ling.gu.se/~lager/python_exercises.html)
 * [Pytania i odpowiedzi](https://docs.python.org/3/faq/programming.html)
 
+Sylabus:
+1.	Aplikacje webowe – historia, rozwiązania, technologie, kierunki rozwoju.
+2.	Wprowadzenie do języka Python – podstawy języka, typy danych, kontrola przepływu, wyjątki.
+3.	Wprowadzenie do języka Python – pliki, funkcje, programowanie obiektowe, wyrażenia regularne, styl.
+4.	Django – tworzenie projektu, konfiguracja bazy danych i aplikacji administratora, testowanie.
+5.	Zarządzanie użytkownikami – tworzenie systemu autentykacji, logowanie i zmienne sesji, rejestracja.
+6.	Interfejs użytkownika -  język szablonów i pliki statyczne, integracja z bootstrapem, kompresja statyczna, refaktoryzacja szablonów.
+7.	Tworzenie i używanie modeli w Django – MVC, mapowanie obiektowo-relacyjne, wykorzystywanie modeli.
+8.	Routing URL,  obsługa HTTP , widoki , szablony, przetwarzanie formularzy.
+9.	Testowanie i uruchamianie apliacji.
+10.	Sesje, obsługa cache, obsługa języków i bezpieczeństwo w Django.
+
 # Laboratorium
 
 Materiały do początkowych zajęć laboratoryjnych:
