--- a/for-students/ai2-2017.md
+++ b/for-students/ai2-2017.md
@@ -20,18 +20,21 @@ Materiały:
 * [Rozszerzony kurs języka Python](https://www.ii.uni.wroc.pl/~marcinm/dyd/python/)
 * Ćwiczenia 1: [Link 1](http://exercism.io/languages/python/exercises), [Link 2](http://www.ling.gu.se/~lager/python_exercises.html)
 * [Pytania i odpowiedzi](https://docs.python.org/3/faq/programming.html)
+* [Wprowadzenie do Pythona (PL)](https://pl.python.org/view/kursy/lwdp.pdf)
+* [Kurs Django Girls](https://tutorial.djangogirls.org/pl/)
 
 Sylabus:
-1.	Aplikacje webowe – historia, rozwiązania, technologie, kierunki rozwoju.
-2.	Wprowadzenie do języka Python – podstawy języka, typy danych, kontrola przepływu, wyjątki.
-3.	Wprowadzenie do języka Python – pliki, funkcje, programowanie obiektowe, wyrażenia regularne, styl.
-4.	Django – tworzenie projektu, konfiguracja bazy danych i aplikacji administratora, testowanie.
-5.	Zarządzanie użytkownikami – tworzenie systemu autentykacji, logowanie i zmienne sesji, rejestracja.
-6.	Interfejs użytkownika -  język szablonów i pliki statyczne, integracja z bootstrapem, kompresja statyczna, refaktoryzacja szablonów.
-7.	Tworzenie i używanie modeli w Django – MVC, mapowanie obiektowo-relacyjne, wykorzystywanie modeli.
-8.	Routing URL,  obsługa HTTP , widoki , szablony, przetwarzanie formularzy.
-9.	Testowanie i uruchamianie apliacji.
-10.	Sesje, obsługa cache, obsługa języków i bezpieczeństwo w Django.
+1.	Wprowadzenie do języka Python
+  * Podstawy języka, typy danych, kontrola przepływu, wyjątki.
+  * Pliki, funkcje, programowanie obiektowe, wyrażenia regularne, styl.
+1.	[Django]
+  * Tworzenie projektu, konfiguracja bazy danych i aplikacji administratora, testowanie.
+  * Zarządzanie użytkownikami – tworzenie systemu autentykacji, logowanie i zmienne sesji, rejestracja.
+  * Interfejs użytkownika -  język szablonów i pliki statyczne, integracja z bootstrapem, kompresja statyczna, refaktoryzacja szablonów.
+  * Tworzenie i używanie modeli w Django – MVC, mapowanie obiektowo-relacyjne, wykorzystywanie modeli.
+  * Routing URL,  obsługa HTTP , widoki , szablony, przetwarzanie formularzy.
+  * Testowanie i uruchamianie apliacji.
+  * Sesje, obsługa cache, obsługa języków i bezpieczeństwo w Django.
 
 # Laboratorium
 
