--- a/for-students/ai2-2017.md
+++ b/for-students/ai2-2017.md
@@ -22,12 +22,13 @@ Materiały:
 * [Pytania i odpowiedzi](https://docs.python.org/3/faq/programming.html)
 * [Wprowadzenie do Pythona (PL)](https://pl.python.org/view/kursy/lwdp.pdf)
 * [Kurs Django Girls](https://tutorial.djangogirls.org/pl/)
+* [Django](http://www.python.rk.edu.pl/w/p/djangoindex/)
 
 Sylabus:
 1.	Wprowadzenie do języka Python
   * Podstawy języka, typy danych, kontrola przepływu, wyjątki.
   * Pliki, funkcje, programowanie obiektowe, wyrażenia regularne, styl.
-1.	[Django]
+1.	Django
   * Tworzenie projektu, konfiguracja bazy danych i aplikacji administratora, testowanie.
   * Zarządzanie użytkownikami – tworzenie systemu autentykacji, logowanie i zmienne sesji, rejestracja.
   * Interfejs użytkownika -  język szablonów i pliki statyczne, integracja z bootstrapem, kompresja statyczna, refaktoryzacja szablonów.
