--- a/for-students/ai2-2017.md
+++ b/for-students/ai2-2017.md
@@ -12,6 +12,8 @@ exclude: true
 Zasady zaliczenia:
 * Egzamin: 14 czerwca.
 * 2 x kolokwium wykładowe: 12 kwietnia 2017 i 7 czerwca 2017.
+  * [Przykładowe materiały do przygotowania do
+  kolokwium](ai2-test-demo.pdf)
 * Laboratorium
 * Projekt
 
