--- a/for-students/ai2-2017.md
+++ b/for-students/ai2-2017.md
@@ -14,6 +14,7 @@ Zasady zaliczenia:
 * 2 x kolokwium wykładowe: 12 kwietnia 2017 i 7 czerwca 2017.
   * [Przykładowe materiały do przygotowania do
   kolokwium](ai2-test-demo.pdf)
+  * [Wyniki pierwszego kolokwium](ai2-2017-kol1-wyn.pdf)
 * Laboratorium
 * Projekt
 
