--- a/for-students/ai2-2017.md
+++ b/for-students/ai2-2017.md
@@ -9,6 +9,8 @@ exclude: true
 
 # Informacje
 
+<font style="color: red !important">ABC</font>
+
 Zasady zaliczenia:
 * Egzamin: 14 czerwca.
 * 2 x kolokwium wykładowe: 12 kwietnia 2017 i 7 czerwca 2017.
