--- a/for-students/ai2-2017.md
+++ b/for-students/ai2-2017.md
@@ -9,7 +9,7 @@ exclude: true
 
 # Informacje
 
-**UWAGA** Zajęcia w dn. 19 kwietnia b.r. **nie odbędą się**!
+<font style="color: red">**UWAGA**</font> Zajęcia w dn. 19 kwietnia b.r. **nie odbędą się**!
 
 Zasady zaliczenia:
 * Egzamin: 14 czerwca.
