--- a/for-students/ai2-2017.md
+++ b/for-students/ai2-2017.md
@@ -84,6 +84,20 @@ Lista projektów do wyboru:
  1. Aplikacja webowa do predykcji obciążenia restauracji na podstawie danych historycznych.
  1. Aplikacja webowa do przewidywania obciążenia ruchu turystycznego na danych historycznych i danych kalendarzowych (np. informacje o świętach, długich weekendach, itp.).
  1. Aplikacja webowa do zbierania i analizowania informacji marketingowych na zadany temat.
+
+*Przykład wykorzystania pakietu sklearn do predykcji:*
+```
+import pandas as pd
+from sklearn.linear_model import LinearRegression
+
+data = pd.read_csv('../data/data.csv')
+df = pd.DataFrame(data)
+X_t = df[['s']]
+y_t = df['v']
+pred_model = LinearRegression()
+pred_model.fit(X_t, y_t)
+pred_model.predict([3])
+```
   
 Biblioteki:
  * [20 bibliotek, bez których programista Pythona (podobno) nie może żyć](https://pythontips.com/2013/07/30/20-python-libraries-you-cant-live-without/)
