--- a/for-students/ai2-2017.md
+++ b/for-students/ai2-2017.md
@@ -26,6 +26,7 @@ Materiały:
 * [Wprowadzenie do Pythona (PL)](https://pl.python.org/view/kursy/lwdp.pdf)
 * [Kurs Django Girls](https://tutorial.djangogirls.org/pl/)
 * [Django](http://www.python.rk.edu.pl/w/p/djangoindex/)
+* [Django cheat sheet](https://www.mercurytide.co.uk/media/resources/Django/django10-cheat-sheet.pdf)
 
 Sylabus:
 1.	Wprowadzenie do języka Python
