--- a/for-students/ai2-2017.md
+++ b/for-students/ai2-2017.md
@@ -20,17 +20,17 @@ Zasady zaliczenia:
 
 Materiały:
 * Python
- * [Dive into Python 3](http://www.diveintopython3.net)
- * [Rozszerzony kurs języka Python](https://www.ii.uni.wroc.pl/~marcinm/dyd/python/)
- * Ćwiczenia 1: [Link 1](http://exercism.io/languages/python/exercises), [Link 2](http://www.ling.gu.se/~lager/python_exercises.html)
- * [Pytania i odpowiedzi](https://docs.python.org/3/faq/programming.html)
- * [Wprowadzenie do Pythona (PL)](https://pl.python.org/view/kursy/lwdp.pdf)
+  * [Dive into Python 3](http://www.diveintopython3.net)
+  * [Rozszerzony kurs języka Python](https://www.ii.uni.wroc.pl/~marcinm/dyd/python/)
+  * Ćwiczenia 1: [Link 1](http://exercism.io/languages/python/exercises), [Link 2](http://www.ling.gu.se/~lager/python_exercises.html)
+  * [Pytania i odpowiedzi](https://docs.python.org/3/faq/programming.html)
+  * [Wprowadzenie do Pythona (PL)](https://pl.python.org/view/kursy/lwdp.pdf)
 * Django
- * [Kurs Django Girls](https://tutorial.djangogirls.org/pl/)
- * [Django](http://www.python.rk.edu.pl/w/p/djangoindex/)
- * [heat sheet](https://www.mercurytide.co.uk/media/resources/Django/django10-cheat-sheet.pdf)
- * [Jak zainstalować?](https://www.howtoforge.com/tutorial/how-to-install-django-on-ubuntu/)
- * [Dokumentacja](https://docs.djangoproject.com/en/1.11/)
+  * [Kurs Django Girls](https://tutorial.djangogirls.org/pl/)
+  * [Django](http://www.python.rk.edu.pl/w/p/djangoindex/)
+  * [heat sheet](https://www.mercurytide.co.uk/media/resources/Django/django10-cheat-sheet.pdf)
+  * [Jak zainstalować?](https://www.howtoforge.com/tutorial/how-to-install-django-on-ubuntu/)
+  * [Dokumentacja](https://docs.djangoproject.com/en/1.11/)  
 
 Sylabus:
 1.	Wprowadzenie do języka Python
@@ -47,7 +47,7 @@ Sylabus:
 
 # Laboratorium
 
-Materiały do początkowych zajęć laboratoryjnych:
+Materiały do zajęć laboratoryjnych:
 1. [https://developers.google.com/edu/python/exercises/basic](https://developers.google.com/edu/python/exercises/basic)
 2. [https://github.com/piotrlasek/python-labs](https://github.com/piotrlasek/python-labs)
 
