--- a/for-students/ai2-2017.md
+++ b/for-students/ai2-2017.md
@@ -24,13 +24,13 @@ Materiały:
   * [Rozszerzony kurs języka Python](https://www.ii.uni.wroc.pl/~marcinm/dyd/python/)
   * Ćwiczenia 1: [Link 1](http://exercism.io/languages/python/exercises), [Link 2](http://www.ling.gu.se/~lager/python_exercises.html)
   * [Pytania i odpowiedzi](https://docs.python.org/3/faq/programming.html)
-  * [Wprowadzenie do Pythona (PL)](https://pl.python.org/view/kursy/lwdp.pdf)
+  * [Wprowadzenie do Pythona](https://pl.python.org/view/kursy/lwdp.pdf)
 * Django
   * [Kurs Django Girls](https://tutorial.djangogirls.org/pl/)
-  * [Django](http://www.python.rk.edu.pl/w/p/djangoindex/)
-  * [heat sheet](https://www.mercurytide.co.uk/media/resources/Django/django10-cheat-sheet.pdf)
-  * [Jak zainstalować?](https://www.howtoforge.com/tutorial/how-to-install-django-on-ubuntu/)
-  * [Dokumentacja](https://docs.djangoproject.com/en/1.11/)  
+  * [Wprowadzenie do Django](http://www.python.rk.edu.pl/w/p/djangoindex/)
+  * [Cheat sheet](https://www.mercurytide.co.uk/media/resources/Django/django10-cheat-sheet.pdf)
+  * [How to install Django on Ubuntu](https://www.howtoforge.com/tutorial/how-to-install-django-on-ubuntu/)
+  * [Django documentation](https://docs.djangoproject.com/en/1.11/)  
 
 Sylabus:
 1.	Wprowadzenie do języka Python
