--- a/for-students/ai2-2017.md
+++ b/for-students/ai2-2017.md
@@ -30,7 +30,15 @@ Materiały:
   * [Wprowadzenie do Django](http://www.python.rk.edu.pl/w/p/djangoindex/)
   * [Cheat sheet](https://www.mercurytide.co.uk/media/resources/Django/django10-cheat-sheet.pdf)
   * [How to install Django on Ubuntu](https://www.howtoforge.com/tutorial/how-to-install-django-on-ubuntu/)
-  * [Django documentation](https://docs.djangoproject.com/en/1.11/)  
+  * [Django documentation](https://docs.djangoproject.com/en/1.11/)
+* Biblioteki:
+  * [20 bibliotek, bez których programista Pythona (podobno) nie może żyć](https://pythontips.com/2013/07/30/20-python-libraries-you-cant-live-without/)
+  * [Przydatne moduły, pakiety i biblioteki](https://wiki.python.org/moin/UsefulModules)
+  * Biblioteki do analizy danych:
+    * [15 bibliotek do analizy danych](https://www.upwork.com/hiring/data/15-python-libraries-data-science/)
+    * [Przydatne biblioteki do analizy danych](https://github.com/rasbt/pattern_classification/blob/master/resources/python_data_libraries.md)
+  * [Biblioteki do wizualizacji danych](https://blog.modeanalytics.com/python-data-visualization-libraries/)
+
 
 Sylabus:
 1.	Wprowadzenie do języka Python
@@ -104,10 +112,3 @@ pred_model.fit(X_t, y_t)
 pred_model.predict([3])
 ```
   
-Biblioteki:
- * [20 bibliotek, bez których programista Pythona (podobno) nie może żyć](https://pythontips.com/2013/07/30/20-python-libraries-you-cant-live-without/)
- * [Przydatne moduły, pakiety i biblioteki](https://wiki.python.org/moin/UsefulModules)
- * Biblioteki do analizy danych:
-   * [15 bibliotek do analizy danych](https://www.upwork.com/hiring/data/15-python-libraries-data-science/)
-   * [Przydatne biblioteki do analizy danych](https://github.com/rasbt/pattern_classification/blob/master/resources/python_data_libraries.md)
- * [Biblioteki do wizualizacji danych](https://blog.modeanalytics.com/python-data-visualization-libraries/)
