--- a/for-students/ai2-2017.md
+++ b/for-students/ai2-2017.md
@@ -18,6 +18,9 @@ Zasady zaliczenia:
 * Laboratorium
 * Projekt
 
+Slajdy z wykładów:
+* [Wprowadzenie do Django](https://docs.google.com/presentation/d/1WvEaipq7ZvOKHNR-ZM_wT22bvGPMk6mrfQ4xBfAVclU/edit?usp=sharing)
+
 Materiały:
 * Python
   * [Dive into Python 3](http://www.diveintopython3.net)
