--- a/for-students/ai2-2017.md
+++ b/for-students/ai2-2017.md
@@ -19,7 +19,9 @@ Zasady zaliczenia:
 * Projekt
 
 Slajdy z wykładów:
-* [Wprowadzenie do Django](https://docs.google.com/presentation/d/1WvEaipq7ZvOKHNR-ZM_wT22bvGPMk6mrfQ4xBfAVclU/edit?usp=sharing)
+
+Wprowadzenie do Django
+<iframe src="https://docs.google.com/presentation/d/1WvEaipq7ZvOKHNR-ZM_wT22bvGPMk6mrfQ4xBfAVclU/embed?start=false&loop=false&delayms=3000" frameborder="0" width="480" height="299" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
 
 Materiały:
 * Python
