--- a/for-students/ai2-2017.md
+++ b/for-students/ai2-2017.md
@@ -10,7 +10,7 @@ exclude: true
 # Informacje
 
 Zasady zaliczenia:
-* Egzamin: **UWAGA!** Zmiana terminu egzaminu. Bardzo proszę o kontakt mailowy Starostę grupy w celu ustalenia nowego terminu egzaminu. 
+* Egzamin: **UWAGA! Zmiana terminu egzaminu. Bardzo proszę o kontakt mailowy Starostę grupy w celu ustalenia nowego terminu egzaminu.**
 * 2 x kolokwium wykładowe: 12 kwietnia 2017 i 7 czerwca 2017.
   * [Przykładowe materiały do przygotowania do
   kolokwium](ai2-test-demo.pdf)
