--- a/for-students/ai2-2017.md
+++ b/for-students/ai2-2017.md
@@ -15,8 +15,8 @@ Zasady zaliczenia:
   * [Przykładowe materiały do przygotowania do
   kolokwium](ai2-test-demo.pdf)
   * Wyniki kolokwiów i egzaminów
-    * [Egzamin, 20.05.2017, (niestacjonarne)](ai2-2017-egz-nst.pdf)
-    * [Kolokwium I, 12.04.2017, (stacjonarne)](ai2-2017-kol1-wyn.pdf)
+    * [Stacjonarne](ai2-2017-oceny.pdf)
+    * [Niestacjonarne](ai2-2017-kol1-wyn.pdf)
 * Laboratorium
 * Projekt
 
