--- a/for-students/pwir2017.md
+++ b/for-students/pwir2017.md
@@ -5,6 +5,8 @@ permalink: /for-students/pwir
 exclude: true
 ---
 
+# UWAGA: STRONA W PRZYGOTOWANIU
+
 # Zasady zaliczenia laboratorium
 
 Zaliczenie laboratorium odbywa się na podstawie zaliczenia czterech
@@ -19,20 +21,32 @@ się z następujących elementów:
    * Opis implementacji (np. wykorzystanych klas lub bibliotek).
    * Dyskusja wykonanych eksperymentów potwierdzających (lub nie)
      poprawność implementacji.
-   * 
+3. Obrona projektu w formie pytań dotyczących projektu. Przykładowe
+   pytania podane są poniżej.
 
 # Tematy zadań projektowych
 
 Preferowana technologia implementacji: Język Java.
 
-1. Implementacja algorytmu Petersona.
-2. BlockingQueue.
-3. Exchchanger
-4. notify / notifyAll / wait.
-
+1. Implementacja Algorytmu Petersona.
+2. Symulacja problemu producentów i konsumentów przy użyciu klasy *BlockingQueue*.
+3. Symulacja gaszenia pożaru przy użyciu klasy *Exchchanger*.
+4. Symulacja dworca autobusowego (lub lotniska) przy użyciu funkcji języja Java takich jak: notify / notifyAll / wait.
 
 # Przykładowe pytania pomocne w zaliczaniu zadań projektowych
 
+1. Algorytm Petersona.
+   * Czym charakteryzuje się algorytm Petersona?
+   * W którym momencie następuje przełączenie pomiędzy *procesami*?
+2. *BlockingQueue*.
+   * Co stanie się w przypadku kiedy producent wyprodukuje zbyt dużo
+       obiektów?
+   * Co stanie się w przypadku kiedy konsument będzie próbował
+       odbierać obiekty z pustego bufora?
+3. *Exchanger*
+4. *notifyAll*
+
+<!--
 1. Obecność na laboratorium.
 2. Implementacja i prezentacja mini-projektów.
 3. Kolokwia wykładowe.
@@ -47,6 +61,7 @@ Preferowana technologia implementacji: Język Java.
    * Pierwszy termin:
      * 23 stycznia 2017 r., sala 243, godz. 9:00.
    * **Materiały do przygotowania do egzaminu i [kolokwium](pwir-kolokwium-2.pdf)**.
+-->
 
 # Slajdy
 
