--- a/for-students/pwir2017.md
+++ b/for-students/pwir2017.md
@@ -27,12 +27,16 @@ się z następujących elementów:
 # Tematy zadań projektowych
 
 Preferowana technologia implementacji: Język Java.
+Dokumentacja do pakietu java.util.concurrent w postaci tutoriala dostępna jest [tutaj](https://docs.oracle.com/javase/tutorial/essential/concurrency/index.html).
 
 1. Implementacja Algorytmu Petersona.
+   * [Wikipedia](https://pl.wikipedia.org/wiki/Algorytm_Petersona)
 2. Symulacja problemu producentów i konsumentów przy użyciu klasy *BlockingQueue*.
+   * [Dokumentacja](https://docs.oracle.com/javase/7/docs/api/java/util/concurrent/BlockingQueue.html)
 3. Symulacja gaszenia pożaru przy użyciu klasy *Exchchanger*.
+   * [Dokumentacja](https://docs.oracle.com/javase/7/docs/api/java/util/concurrent/Exchanger.html)
 4. Symulacja dworca autobusowego (lub lotniska) przy użyciu funkcji języja Java takich jak: notify / notifyAll / wait.
-
+    * [Guarded blocks](https://docs.oracle.com/javase/tutorial/essential/concurrency/guardmeth.html)
 # Przykładowe pytania pomocne w zaliczaniu zadań projektowych
 
 1. Algorytm Petersona.
