--- a/for-students/pwir2017.md
+++ b/for-students/pwir2017.md
@@ -68,7 +68,7 @@ Dokumentacja do pakietu java.util.concurrent w postaci tutoriala dostępna jest 
    * **Materiały do przygotowania do egzaminu i [kolokwium](pwir-kolokwium-2.pdf)**.
 -->
 
-# Slajdy
+# Slajdy do wykładu (Jesień 2016)
 
 <iframe src="https://docs.google.com/presentation/d/1uDHyqTuH74eFHItjUmK2E1E-GVj_0vT1WCtxYCzwe2c/embed?start=false&loop=false&delayms=3000" frameborder="0" width="480" height="299" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
 
