--- a/for-students/pwir2017.md
+++ b/for-students/pwir2017.md
@@ -31,10 +31,26 @@ Dokumentacja do pakietu java.util.concurrent w postaci tutoriala dostępna jest 
 
 1. Implementacja Algorytmu Petersona.
    * [Wikipedia](https://pl.wikipedia.org/wiki/Algorytm_Petersona)
+   * Celem zadania jest zaimplementowanie i przebadanie algorytmu
+         Petersona.
 2. Symulacja problemu producentów i konsumentów przy użyciu klasy *BlockingQueue*.
    * [Dokumentacja](https://docs.oracle.com/javase/7/docs/api/java/util/concurrent/BlockingQueue.html)
+   * Zadanie polega na zaimplementowaniu i przebadaniu klasycznego
+       problemu producentów i konsumentów przy użyciu klasy z pakietu
+       java.util.concurrent o nazwie *BlockingQueue*. Po zaimplementowaniu
+       należy sprawdzić poprawność implementacji.
 3. Symulacja gaszenia pożaru przy użyciu klasy *Exchchanger*.
    * [Dokumentacja](https://docs.oracle.com/javase/7/docs/api/java/util/concurrent/Exchanger.html)
+   * Wyobraźmy sobie następującą scenę. Po prawej stronie widzimy
+       palący się budynek. Po lewej stronie znajduje studnia. Pomiędzy
+       budynkiem i studnią znajduje się *k* osób, które będą gasić
+       pożar. Gaszenie pożaru polega na przekazywaniu wiader
+       napełnionych wodą od osoby, która znajduje się najbliżej studni
+       do osoby, która znajduje się przy palącym się budynku. Osoba
+       przy studni odpowiedzialna jest za napełnianie wiader,
+       natomiast osoba przy budynku za ich opróżnianie. Należy przyjąć
+       następujące założenia: liczba wiader jest równa liczbie osób,
+       liczba obiektów *Exchanger* jest o 1 mniejsza od liczby osób.
 4. Symulacja dworca autobusowego (lub lotniska) przy użyciu funkcji języja Java takich jak: notify / notifyAll / wait.
     * [Guarded blocks](https://docs.oracle.com/javase/tutorial/essential/concurrency/guardmeth.html)
 
