--- a/for-students/pwir2017.md
+++ b/for-students/pwir2017.md
@@ -53,6 +53,13 @@ Dokumentacja do pakietu java.util.concurrent w postaci tutoriala dostępna jest 
        liczba obiektów *Exchanger* jest o 1 mniejsza od liczby osób.
 4. Symulacja dworca autobusowego (lub lotniska) przy użyciu funkcji języja Java takich jak: notify / notifyAll / wait.
     * [Guarded blocks](https://docs.oracle.com/javase/tutorial/essential/concurrency/guardmeth.html)
+    * Przystanek, na którym gromadzą się pasażerowie pełni rolę
+      obiektu za pomocą którego pasażerowie będą *synchronizować* się
+      z autobusem. Każdy pasażer, dochodząc do przystanku, wywołuje na
+      nim funkcję *wait* i zaczyna czekać na autobus. Autobus
+      natomiast, jako odrębny wątek, po dojechaniu do przystanku,
+      *wybudza* pasażerów za pomocą wywołania na przystanku funkcji
+      *notifyAll*.
 
 # Przykładowe pytania pomocne w zaliczaniu zadań projektowych
 
