--- a/for-students/pwir2017.md
+++ b/for-students/pwir2017.md
@@ -26,8 +26,8 @@ się z następujących elementów:
 
 # Tematy zadań projektowych
 
-Preferowana technologia implementacji: Język Java.
-Dokumentacja do pakietu java.util.concurrent w postaci tutoriala dostępna jest [tutaj](https://docs.oracle.com/javase/tutorial/essential/concurrency/index.html).
+* Preferowana technologia implementacji: Język Java.
+* Dokumentacja do pakietu java.util.concurrent w postaci tutoriala dostępna jest [tutaj](https://docs.oracle.com/javase/tutorial/essential/concurrency/index.html).
 
 1. Implementacja Algorytmu Petersona.
    * [Wikipedia](https://pl.wikipedia.org/wiki/Algorytm_Petersona)
