--- a/for-students/pwir2017.md
+++ b/for-students/pwir2017.md
@@ -26,19 +26,21 @@ się z następujących elementów:
 
 # Tematy zadań projektowych
 
-* Preferowana technologia implementacji: Język Java.
-* Dokumentacja do pakietu java.util.concurrent w postaci tutoriala dostępna jest [tutaj](https://docs.oracle.com/javase/tutorial/essential/concurrency/index.html).
+* Preferowana technologia implementacji: *Język Java*.
+* Dokumentacja do pakietu **java.util.concurrent** w postaci tutoriala dostępna jest [tutaj](https://docs.oracle.com/javase/tutorial/essential/concurrency/index.html).
 
-1. Implementacja Algorytmu Petersona.
-   * [Wikipedia](https://pl.wikipedia.org/wiki/Algorytm_Petersona)
+1. Implementacja *Algorytmu Petersona*.
    * Celem zadania jest zaimplementowanie i przebadanie algorytmu
          Petersona.
+   * Dokumentacja
+    * [Wikipedia](https://pl.wikipedia.org/wiki/Algorytm_Petersona)
+    * Slajdy do wykładu
 2. Symulacja problemu producentów i konsumentów przy użyciu klasy *BlockingQueue*.
-   * [Dokumentacja](https://docs.oracle.com/javase/7/docs/api/java/util/concurrent/BlockingQueue.html)
    * Zadanie polega na zaimplementowaniu i przebadaniu klasycznego
        problemu producentów i konsumentów przy użyciu klasy z pakietu
        java.util.concurrent o nazwie *BlockingQueue*. Po zaimplementowaniu
        należy sprawdzić poprawność implementacji.
+   * [Dokumentacja](https://docs.oracle.com/javase/7/docs/api/java/util/concurrent/BlockingQueue.html)
 3. Symulacja gaszenia pożaru przy użyciu klasy *Exchchanger*.
    * [Dokumentacja](https://docs.oracle.com/javase/7/docs/api/java/util/concurrent/Exchanger.html)
    * Wyobraźmy sobie następującą scenę. Po prawej stronie widzimy
