--- a/for-students/pwir2017.md
+++ b/for-students/pwir2017.md
@@ -42,7 +42,6 @@ się z następujących elementów:
        należy sprawdzić poprawność implementacji.
    * [Dokumentacja](https://docs.oracle.com/javase/7/docs/api/java/util/concurrent/BlockingQueue.html)
 3. Symulacja gaszenia pożaru przy użyciu klasy *Exchchanger*.
-   * [Dokumentacja](https://docs.oracle.com/javase/7/docs/api/java/util/concurrent/Exchanger.html)
    * Wyobraźmy sobie następującą scenę. Po prawej stronie widzimy
        palący się budynek. Po lewej stronie znajduje studnia. Pomiędzy
        budynkiem i studnią znajduje się *k* osób, które będą gasić
@@ -53,8 +52,9 @@ się z następujących elementów:
        natomiast osoba przy budynku za ich opróżnianie. Należy przyjąć
        następujące założenia: liczba wiader jest równa liczbie osób,
        liczba obiektów *Exchanger* jest o 1 mniejsza od liczby osób.
+   * [Dokumentacja](https://docs.oracle.com/javase/7/docs/api/java/util/concurrent/Exchanger.html)
+   * [Przykładowa implementacja](https://github.com/piotrlasek/exchanger-demo)
 4. Symulacja dworca autobusowego (lub lotniska) przy użyciu funkcji języja Java takich jak: notify / notifyAll / wait.
-    * [Guarded blocks](https://docs.oracle.com/javase/tutorial/essential/concurrency/guardmeth.html)
     * Przystanek, na którym gromadzą się pasażerowie pełni rolę
       obiektu za pomocą którego pasażerowie będą *synchronizować* się
       z autobusem. Każdy pasażer, dochodząc do przystanku, wywołuje na
@@ -62,19 +62,36 @@ się z następujących elementów:
       natomiast, jako odrębny wątek, po dojechaniu do przystanku,
       *wybudza* pasażerów za pomocą wywołania na przystanku funkcji
       *notifyAll*.
-
+    * [Guarded blocks](https://docs.oracle.com/javase/tutorial/essential/concurrency/guardmeth.html)
+    * [Przykładowa implementacja](https://github.com/piotrlasek/bus-stop)
 # Przykładowe pytania pomocne w zaliczaniu zadań projektowych
 
 1. Algorytm Petersona.
    * Czym charakteryzuje się algorytm Petersona?
    * W którym momencie następuje przełączenie pomiędzy *procesami*?
+   * Wskazać i wyjaśnić w którym miejscu znajduje się *sekcja
+     krytyczna*.
+   * Dlaczego dwa procesy nie mogą jednocześnie znaleźć się w sekcji
+     krytycznej?
 2. *BlockingQueue*.
    * Co stanie się w przypadku kiedy producent wyprodukuje zbyt dużo
        obiektów?
    * Co stanie się w przypadku kiedy konsument będzie próbował
        odbierać obiekty z pustego bufora?
-3. *Exchanger*
-4. *notifyAll*
+3. Symulacja gaszenia pożaru.
+   * Jaki wpływ na gaszących będzie miała niedyspozycja (niemożność
+     przekazania wiadra w jedną lub drugą stronę) jednego z
+     gaszących?
+   * W jaki sposób należy zainicjować zmienne *Bucket*?
+   * Co się stanie w sytuacji gdy wszystkie wiadra będą na początku
+     puste?
+   * Czy w przypadku wyschnięcia studni gaszący nadal będą przekazywać
+     sobie wiadra?
+4. Symulacja dworca / lotniska.
+   * Co stanie się z pasażerami jeśli autobus nigdy nie przyjedzie?
+   * Co stanie się jeśli autobus przyjedzie, ale na przystanku nie
+     będzie pasażerów?
+
 
 <!--
 1. Obecność na laboratorium.
