--- a/for-students/pwir2017.md
+++ b/for-students/pwir2017.md
@@ -5,7 +5,7 @@ permalink: /for-students/pwir
 exclude: true
 ---
 
-# <font color=red>**UWAGA: Zajęcia w dniach 13-16 listpada odbędą się w innym terminie!</font>**
+# <p style='color:red'>**UWAGA: Zajęcia w dniach 13-16 listpada odbędą się w innym terminie!**</p>
 
 # Zasady zaliczenia laboratorium
 
