--- a/for-students/pwir2017.md
+++ b/for-students/pwir2017.md
@@ -5,9 +5,9 @@ permalink: /for-students/pwir
 exclude: true
 ---
 
-Ostatnia aktualizacja: **2017-11-20**
+Ostatnia aktualizacja: **2017-11-21**
 
-&#x1F534; &#x1F534; UWAGA: Zajęcia w dniu **21 listopada** odbędą się w innym terminie!
+&#x1F534; &#x1F534; Proszę zignorować ogłoszenie z dnia wczorajszego!
 
 # Zasady zaliczenia laboratorium
 
