--- a/for-students/pwir2017.md
+++ b/for-students/pwir2017.md
@@ -5,7 +5,9 @@ permalink: /for-students/pwir
 exclude: true
 ---
 
-Ostatnia aktualizacja: **2017-12-07**
+Ostatnia aktualizacja: **2018-01-07**
+
+* &#x1F534; **UWAGA**: Zajęcia z dnia 9 stycznia 2018 odbędą się w dniu **11 stycznia** w sali 107 B3 w godz. 17:45 - 19:15.
 
 # Zasady zaliczenia laboratorium
 
