--- a/for-students/pwir2017.md
+++ b/for-students/pwir2017.md
@@ -8,7 +8,7 @@ exclude: true
 Ostatnia aktualizacja: **2018-01-07**
 
 # &#x1F534; Komunikat
-**UWAGA**: Zajęcia z dnia 9 stycznia 2018 odbędą się w dniu **11 stycznia** w sali 107 B3 w godz. 17:45 - 19:15.
+**UWAGA**: Zajęcia laboratoryjne z dnia 9 stycznia 2018 r. odbędą się w późniejszym terminie.
 
 # Zasady zaliczenia laboratorium
 
