--- a/for-students/pwir2017.md
+++ b/for-students/pwir2017.md
@@ -72,18 +72,21 @@ się z następujących elementów:
 
 1. Algorytm Petersona.
    * Czym charakteryzuje się algorytm Petersona?
-   * W którym momencie następuje przełączenie pomiędzy *procesami*?
+   * Wyjaśnić negatywne cechy algorytmu Petersona.
+   * W którym momencie następuje zamiana procesów w sekcji krytycznej?
    * Wskazać i wyjaśnić w którym miejscu znajduje się *sekcja
      krytyczna*.
    * Dlaczego dwa procesy nie mogą jednocześnie znaleźć się w sekcji
      krytycznej?
 2. *BlockingQueue*.
-   * Co stanie się w przypadku kiedy producent wyprodukuje zbyt dużo
+   * Co stanie się w przypadku kiedy producent wyprodukuje za dużo
        obiektów?
    * Co stanie się w przypadku kiedy konsument będzie próbował
        odbierać obiekty z pustego bufora?
+   * Co się stanie jeśli producent będzie produkował zdecydowanie więcej
+       obiektów niż konsument będzie konsumował.
 3. Symulacja gaszenia pożaru.
-   * Jaki wpływ na gaszących będzie miała niedyspozycja (niemożność
+   * Jaki wpływ na strażaków będzie miała niedyspozycja (niemożność
      przekazania wiadra w jedną lub drugą stronę) jednego z
      gaszących?
    * W jaki sposób należy zainicjować zmienne *Bucket*?
@@ -95,6 +98,7 @@ się z następujących elementów:
    * Co stanie się z pasażerami jeśli autobus nigdy nie przyjedzie?
    * Co stanie się jeśli autobus przyjedzie, ale na przystanku nie
      będzie pasażerów?
+   * Co się stanie jeśli zamiast funkcji *notifyAll* funkcję *notify*.
 
 
 <!--
