--- a/for-students/pwir2017.md
+++ b/for-students/pwir2017.md
@@ -5,7 +5,7 @@ permalink: /for-students/pwir
 exclude: true
 ---
 
-Ostatnia aktualizacja: **2018-01-07**
+Ostatnia aktualizacja: **2018-01-16**
 
 <!--
 # &#x1F534; Komunikat
@@ -100,7 +100,8 @@ się z następujących elementów:
    * Co stanie się z pasażerami jeśli autobus nigdy nie przyjedzie?
    * Co stanie się jeśli autobus przyjedzie, ale na przystanku nie
      będzie pasażerów?
-   * Co się stanie jeśli zamiast funkcji *notifyAll* funkcję *notify*.
+   * Co się stanie jeśli zamiast funkcji *notifyAll* wykorzysta się
+     funkcję *notify*?
 
 
 <!--
